# clawpond

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/app/: globals.css  layout.tsx  page.tsx
apps/desktop/src/components/: a2ui-panel.tsx  chat-area.tsx  config-wizard.tsx  discovery-banner.tsx  icons.tsx  mention-popup.tsx  quick-config.tsx  sidebar.tsx  task-panel.tsx  text-actions.tsx  top-bar.tsx  update-checker.tsx  usage-heatmap.tsx
apps/desktop/src/components/chat/: chat-area.tsx  mention-popup.tsx
apps/desktop/src/components/config/: config-wizard.tsx  quick-config.tsx
apps/desktop/src/components/modals/: add-gateway-modal.tsx  delete-gateway-modal.tsx  rename-gateway-modal.tsx  settings-modal.tsx  update-checker.tsx
apps/desktop/src/components/navigation/: gateway-context-menu.tsx  sidebar.tsx  top-bar.tsx
apps/desktop/src/lib/: chat-store.ts  emoji-data.ts  mention-utils.ts  open-url.ts  rpc-pool.ts  usage-store.ts
apps/desktop/src/lib/bridge/: browser.ts  docker.ts  gateway.ts  local.ts
apps/desktop/src/lib/rpc/: openclaw-rpc.ts  rpc-pool-context.tsx  rpc-pool.ts
apps/desktop/src/lib/stores/: chat-store.ts  gateway-store.ts  migration.ts  settings-store.ts  usage-store.ts
apps/desktop/src/lib/updater/: updater.ts
apps/desktop/src/types/: speech.d.ts
crates/claw-export/: Cargo.toml
crates/claw-export/src/: error.rs  lib.rs  snapshot.rs
crates/claw-spawner/: Cargo.toml
crates/claw-spawner/src/: error.rs  lib.rs  registry.rs  spawner.rs
crates/claw-ui-bridge/: Cargo.toml
crates/claw-ui-bridge/src/: commands.rs  db.rs  lib.rs  state.rs
crates/claw-updater/: Cargo.toml
crates/claw-updater/src/: error.rs  lib.rs  updater.rs  version.rs
crates/clawking/: Cargo.toml
crates/clawking/src/: config.rs  docker.rs  error.rs  gateway.rs  lib.rs  local_process.rs  models.rs
docs/: prompts.md
