[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/clawking",
  "crates/claw-spawner",
  "crates/claw-export",
  "crates/claw-ui-bridge",
  "crates/claw-updater",
]

[workspace.package]
version = "0.1.0"
authors = ["INFINIACT CO., LTD"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.10.3", features = ["tray-icon"] }
rusqlite = { version = "0.32", features = ["bundled"] }
