[package]
name = "claw-spawner"
description = "Gateway spawner - provision and manage additional OpenClaw gateway instances"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
clawking = { path = "../clawking" }
