[package]
name = "claw-ui-bridge"
description = "Tauri command bridge - exposes gateway and agent management to the desktop UI"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
tauri.workspace = true
shellexpand = "3"
clawking = { path = "../clawking" }
claw-spawner = { path = "../claw-spawner" }
claw-updater = { path = "../claw-updater" }
claw-export = { path = "../claw-export" }
base64 = "0.22"
