[package]
name = "clawking"
description = "Core gateway controller - manages the primary OpenClaw gateway instance"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
ureq = { version = "3", features = ["json"] }
