[package]
name = "clawpond"
description = "ClawPond - OpenClaw Desktop Client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "clawpond_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
tauri.workspace = true
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"

clawking = { path = "../../../crates/clawking" }
claw-spawner = { path = "../../../crates/claw-spawner" }
claw-export = { path = "../../../crates/claw-export" }
claw-ui-bridge = { path = "../../../crates/claw-ui-bridge" }
claw-updater = { path = "../../../crates/claw-updater" }
rfd = "0.15"
url = "2"
shellexpand = "3"
